syntax="proto3";

// i must add this so that the generated file will have a prefix  this to allow for calling
 package protoservice;

// here we should describe the request from the api_gateway
message create_user_req{
    string globaluserid =1;
    string phonenumber= 2;
    string kycstatus=3;
    string kyclevel=4;
    bool acceptterms=5;
    int64 transactionlimit=6;
    string username=7;
    create_wallet wallet=8;
    string fullname=9;
}
message deposit_req{
    string transactionid =1;
    string phonenumber =2;
    string amount=3;
    string globaluserid=4;
}
message capital_raise_req{
    string capitalrequired=1;
    string creator=2;
    string startingdate=3;
    string closingdate=4;
}
message withdraw_req{
    string phonenumber=1;
    string amount=2;
    string globaluserid=3;
}
message create_wallet{
    string cashbalance=1;
    string goldbalance=2;
}
message create_user_resp{
    string status=1;
    optional string message=2;
    optional changeseterrors errors=3;
}

message validationerror{
    string field=1;
    string message=2;
}
message changeseterrors{
    repeated validationerror errors=1;
}

message user_account_data_req{
    string id =1;
}
message transfer_req{
    string from_id =1;
    string to_id=2;
    int64 gold_amount=3;
    int64 cash_amount=4;
}
message sale_req{
    string from_id =1;
    string to_id=2;
    int64 gold_amount=3;
    int64 cash_amount=4;
}

message opening_req{
}
message history_req{
    string globaluserid=1;
}

/*
request i am thinking should be values like get_account_amount(account_details)
request transfering amount from one person's wallet to another(transfer)
if they want to see any opening they can (openings)
if they are looking for someone selling gold (sale)
market
history

*/
message user_data_resp{
    int64 gold_amount=1;
    int64 cash_amount=2;
}

message sale_resp{
    optional success_sale successdata=1;
    bool success = 2;
    optional string reason=3;
}
message success_sale{
    string id = 1;
    string from = 2;
    string to = 3;
    int64 goldamount = 4;
    int64 moneyamount = 5;
}
// for gold every
message transfer_resp{
    string transer_id=1;
    string from=2;
    string to=3;
    int64 gold_amount=4;
    int64 money_amount=5;
    bool success = 6;
    optional string reason=7;
}

// opening
message opening_resp{
    int64 amount=1;
    string closing_date=2;
}
message history_resp{
    repeated history request=1;
}
message history{
    string opening_date=1;
    string closing_date=2;
    int64 initial_inv=3;
    int64 revenue=4;
    int64 people_inv=5;
    int64 profit_per_shilling=6;
}
message deposit_resp{
    bool success=1;
    optional string reason=2;
}
message withdraw_resp{
    bool success=1;
    optional string reason=2;
}
message capital_raise_resp{
    bool success =1;
    optional string reason=2;
}

service gigservice{
    rpc account_details(user_account_data_req) returns (user_data_resp);
    rpc deposit(deposit_req) returns(deposit_resp);
    rpc withdraw(withdraw_req) returns(withdraw_resp);
    rpc capitalraise(capital_raise_req) returns(capital_raise_resp);
    rpc transfer(transfer_req)returns (transfer_resp);
    rpc sale (sale_req) returns(sale_resp);
    rpc history(history_req) returns (history_resp);
    rpc opening(opening_req) returns (opening_resp);
    rpc createaccount(create_user_req) returns (create_user_resp);
}